# genthumb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  index.mjs  package.json
.github/workflows/: ci.yaml  publish.yaml  release.yaml
src/: document.rs  docx.rs  error.rs  image.rs  lib.rs  pdf.rs  pptx.rs  spreadsheet.rs  text.rs  thumbnail.rs
tests/: buffer-thumbnail.test.ts  document-thumbnail.test.ts  docx-thumbnail.test.ts  excel-thumbnail.test.ts  image-thumbnail.test.ts  pdf-thumbnail.test.ts  pptx-thumbnail.test.ts  presentation-thumbnail.test.ts  spreadsheet-thumbnail.test.ts  text-thumbnail.test.ts
tests/documents/: test-text.txt
