
[package]
authors = ["Mon Albert Gamil <mrgamilmonalbert@gmail.com>"]
edition = "2024"
name    = "genthumb"
version = "1.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow        = "1"
calamine      = "0.31.0"
csv           = "1.4.0"
font8x8       = "0.3.1"
image         = "0.25.9"
infer         = "0.19.0"
napi          = { version = "3.8.3", features = ["error_anyhow"] }
napi-derive   = "3.5.1"
pdfium-auto   = { version = "0.3.0", features = ["bundled"] }
pdfium-render = "0.8.37"
quick-xml     = "0.38.4"
tempfile      = "3.23.0"
thiserror     = "2.0.18"
zip           = "4.6.1"

[build-dependencies]
napi-build = "2"

[profile.release]
codegen-units = 1
lto           = true
strip         = "symbols"
